--- a/Milestone 1 - Personal Portfolio/Module 1 - Learn and explore HTML as a beginner/index.html
+++ b/Milestone 1 - Personal Portfolio/Module 1 - Learn and explore HTML as a beginner/index.html
@@ -5,12 +5,18 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Intro to HTML</title>
+    <title>Intro to HTML heading tag</title>
 </head>
 
 <body>
     <h1>Bangladesh</h1>
     <h1>Is a good country</h1>
+    <h2>we live in a beautiful world</h2>
+    <h3>bones sinkin like a stone</h3>
+    <h4>all that we </h4>
+    <h5>bepa</h5>
+    <h6>yaas</h6>
+
 </body>
 
 </html>
