--- a/Milestone 1 - Personal Portfolio/Module 1 - Learn and explore HTML as a beginner/index.html
+++ b/Milestone 1 - Personal Portfolio/Module 1 - Learn and explore HTML as a beginner/index.html
@@ -6,6 +6,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Intro to HTML heading tag</title>
+    <style>
+        img {
+            height: 100px;
+            width: 100px;
+        }
+    </style>
 </head>
 
 <body>
@@ -16,6 +22,42 @@
     <h4>all that we </h4>
     <h5>bepa</h5>
     <h6>yaas</h6>
+
+    <!-- the anchore tag -->
+    <a href="google.com">google</a>
+    <a href="drive.google.com">drive</a>
+
+    <!-- image tag -->
+    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/8/8d/%D0%92%D0%B5%D1%80%D0%B0_%D0%91%D1%80%D0%B5%D0%B6%D0%BD%D0%B5%D0%B2%D0%B0.jpg/1200px-%D0%92%D0%B5%D1%80%D0%B0_%D0%91%D1%80%D0%B5%D0%B6%D0%BD%D0%B5%D0%B2%D0%B0.jpg"
+        alt="russian artist">
+    <!-- container tag, ordered list , unordered list -->
+    <p>unordered list</p>
+    <ul>
+        <li>1 - patara</li>
+        <li>2 - dim</li>
+        <li>3 - slumenya</li>
+        <li>4 - steak</li>
+        <li>5 - pizza</li>
+    </ul>
+    <p>ordered list</p>
+    <ol>
+        <li>olodama</li>
+        <li>magekyo</li>
+        <li>sharingan</li>
+    </ol>
+
+    <!-- buttons -->
+    <button>click me</button>
+    <button>click me 1</button>
+    <!-- form -->
+    <p>form</p>
+    <form action="">
+        <label for="name">Name:</label>
+        <input type="text" name="" id=""><br>
+        <label for="Pass">pass: </label>
+        <input type="password" name="" id="">
+    </form>
+
 
 </body>
 
