--- a/Milestone 1 - Personal Portfolio/Module 2 - Learn and explore CSS as a beginner [DONE]/2-3 Background-color, height, width, font, CSS measuring units.html
+++ b/Milestone 1 - Personal Portfolio/Module 2 - Learn and explore CSS as a beginner [DONE]/2-3 Background-color, height, width, font, CSS measuring units.html
@@ -35,7 +35,8 @@
 
         img {
             width: 50%;
-            height: 50%;
+            height: 314px;
+            border-radius: 50%;
         }
     </style>
 </head>
